<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swym.app.popups.AddPurchase"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Purchase"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enterPurchase"
                android:layout_gravity="center_horizontal"
                android:hint="@string/PurchaseHint"
                android:editable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Cost"
                android:id="@+id/textView2" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/DollarSign"
                    android:id="@+id/moneySign" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/enterCost"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:hint="@string/CostHint"
                    android:editable="true"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Date"
                android:id="@+id/textView1" />

            <DatePicker
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:calendarViewShown="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Description"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/enterDescription"
                android:hint="@string/DescriptionHint" />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:divider="#8f8f8f">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/cancelButtonText"
                android:id="@+id/cancelButton"
                android:layout_gravity="bottom"
                android:layout_weight=".5"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/saveButtonText"
                android:id="@+id/saveButton"
                android:layout_weight=".5" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
